Dubey, Sukreet | SHR-1339 | birthTime extension is not mandatory while creating a patient.