@@ -44,9 +44,6 @@ test {
     // set heap size for the test JVM(s)
     minHeapSize = "512m"
     maxHeapSize = "1024m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 configurations {
